# qmodem

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  battery_config.json  battery_sim_config.json  example_data_loading.py  example_dropout_nn_rul.py  example_dropout_nn_train.py  example_gauss_nn.py  example_het_nn_prul.py  example_het_nn_rul.py  example_het_nn_score.py  example_het_nn_train.py  mock_dropout.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: jax-research-engineer.agent.md  phm-critical-evaluator.agent.md
.github/prompts/: qavi_rul.prompt.md  todo.prompt.md
.github/workflows/: lint.yml  test.yml
data/: test_case_0.npz  train.npz  val.npz
phme26/: make_results.sh
scripts/: README.md  _shared.py  analyse_cmapss.py  cmapss_lstm.ipynb  cmapss_lstm_optuna.py  cmapss_lstm_optuna_mp.py  example_cnn_rul.py  example_cnn_time_window.py  example_cnn_train.py  example_dropout_nn_crps.py  example_dropout_nn_rul.py  example_dropout_nn_train.py  example_het_cnn_rul.py  example_het_cnn_train.py  example_het_nn_prul.py  example_het_nn_rul.py  example_het_nn_train.py  example_time_window_dataloader.py  generate_data.py
scripts/battery/: bnn_model.py  bnn_test.py  bnn_train.py  commons.py  generate_discharge_histories.py  hnn_model.py  hnn_test.py  hnn_train.py  mcd_model.py  mcd_test.py  mcd_train.py  qavi_model.py  qavi_test.py  qavi_train.py  test_hnn.py  train_hnn.py
scripts/bayes_cnn/: crps_over_time.py  rul.py  train.py
scripts/cmapss/: cmapss_lstm.ipynb  cmapss_lstm_optuna.py  cmapss_lstm_optuna_mp.py
scripts/het_cnn/: crps_over_time.py  rul.py  train.py
scripts/mcd_cnn/: _seeds.py  crps_over_time.py  rul.py  train.py
scripts/qavi_cnn/: crps_over_time.py  rul.py  train.py
src/qmodem/: __init__.py  application.py  cli.py  data.py  generate.py  metadata.py  metrics.py  module.py  tracking.py  train.py  train_adversarial.py  train_base.py  utils.py
tests/: test_batch_norm.py  test_cli.py  test_compare.py  test_data.py  test_generate.py  test_grain_integration.py  test_mc_sample.py  test_metadata.py  test_metrics.py  test_model.py  test_module.py  test_train.py
