[project]
name = "qmodem"
version = "0.1.0"
description = "QMoDeM: Quantum-aided Models for Decision Making."
readme = "README.md"
authors = [
    { name = "debrevitatevitae", email = "giotb92@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax-ai-stack>=2025.10.28",
    "lib-eod-simulation",
    "pennylane>=0.44.0",
    "scikit-learn>=1.8.0",
]

[project.scripts]
qmodem = "qmodem:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]

[tool.docformatter]
recursive = true
black = true
style = "google"

[tool.uv.sources]
lib-eod-simulation = { path = "../lib_eod_simulation", editable = true }
